Movimentum/generated/MovimentumParser.cs
// $ANTLR 3.1.1 Movimentum.g 2012-04-28 17:47:24
// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
namespace  Movimentum.Parser 
{

        using System.Collections.Generic;
        using Movimentum.Model;
        using System.Drawing;
        using System.Globalization;
    

using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

public partial class MovimentumParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"CONFIG", 
		"IDENT", 
		"FILENAME", 
		"BAR", 
		"X", 
		"Y", 
		"Z", 
		"ROTATE", 
		"INTEGRAL", 
		"DIFFERENTIAL", 
		"SQRT", 
		"ANGLE", 
		"T", 
		"IV", 
		"LENGTH", 
		"NUMBER", 
		"COLOR", 
		"WHITESPACE", 
		"COMMENT", 
		"'('", 
		"','", 
		"')'", 
		"';'", 
		"':'", 
		"'='", 
		"'+'", 
		"'-'", 
		"'['", 
		"']'", 
		"'@'", 
		"'<'", 
		"'>'", 
		"'<='", 
		"'>='", 
		"'*'", 
		"'_'", 
		"'.'", 
		"'/'", 
		"'^2'", 
		"'^3'"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int INTEGRAL = 12;
    public const int EOF = -1;
    public const int COLOR = 20;
    public const int LENGTH = 18;
    public const int FILENAME = 6;
    public const int IV = 17;
    public const int IDENT = 5;
    public const int COMMENT = 22;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int ANGLE = 15;
    public const int NUMBER = 19;
    public const int T = 16;
    public const int WHITESPACE = 21;
    public const int ROTATE = 11;
    public const int SQRT = 14;
    public const int Y = 9;
    public const int X = 8;
    public const int Z = 10;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int CONFIG = 4;
    public const int T__32 = 32;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int BAR = 7;
    public const int DIFFERENTIAL = 13;

    // delegates
    // delegators



        public MovimentumParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MovimentumParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        

    override public string[] TokenNames {
		get { return MovimentumParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Movimentum.g"; }
    }



    // $ANTLR start "script"
    // Movimentum.g:18:5: script returns [Script script] : cfg= config (t= thingdefinition )* ( time (c= constraint )* )* EOF ;
    public Script script() // throws RecognitionException [1]
    {   
        Script script = default(Script);

        Config cfg = default(Config);

        Thing t = default(Thing);

        Constraint c = default(Constraint);


        try 
    	{
            // Movimentum.g:19:7: (cfg= config (t= thingdefinition )* ( time (c= constraint )* )* EOF )
            // Movimentum.g:19:29: cfg= config (t= thingdefinition )* ( time (c= constraint )* )* EOF
            {
            	 var ths = new List<Thing>();
            	                               var sts = new List<Step>();
            	                            
            	PushFollow(FOLLOW_config_in_script124);
            	cfg = config();
            	state.followingStackPointer--;
            	if (state.failed) return script;
            	// Movimentum.g:23:9: (t= thingdefinition )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == IDENT) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Movimentum.g:23:11: t= thingdefinition
            			    {
            			    	PushFollow(FOLLOW_thingdefinition_in_script138);
            			    	t = thingdefinition();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return script;
            			    	if ( state.backtracking == 0 ) 
            			    	{
            			    	   ths.Add(t); 
            			    	}

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	// Movimentum.g:25:9: ( time (c= constraint )* )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0 == 33) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // Movimentum.g:25:11: time (c= constraint )*
            			    {
            			    	PushFollow(FOLLOW_time_in_script163);
            			    	time();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return script;
            			    	 var cs = new List<Constraint>(); 
            			    	// Movimentum.g:26:11: (c= constraint )*
            			    	do 
            			    	{
            			    	    int alt2 = 2;
            			    	    int LA2_0 = input.LA(1);

            			    	    if ( (LA2_0 == IDENT) )
            			    	    {
            			    	        alt2 = 1;
            			    	    }


            			    	    switch (alt2) 
            			    		{
            			    			case 1 :
            			    			    // Movimentum.g:26:13: c= constraint
            			    			    {
            			    			    	PushFollow(FOLLOW_constraint_in_script194);
            			    			    	c = constraint();
            			    			    	state.followingStackPointer--;
            			    			    	if (state.failed) return script;
            			    			    	if ( state.backtracking == 0 ) 
            			    			    	{
            			    			    	   cs.Add(c); 
            			    			    	}

            			    			    }
            			    			    break;

            			    			default:
            			    			    goto loop2;
            			    	    }
            			    	} while (true);

            			    	loop2:
            			    		;	// Stops C# compiler whining that label 'loop2' has no statements

            			    	if ( state.backtracking == 0 ) 
            			    	{
            			    	   sts.Add(new Step(_currentTime, cs)); 
            			    	}

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements

            	if ( state.backtracking == 0 ) 
            	{
            	   script = new Script(cfg,ths,sts); 
            	}
            	Match(input,EOF,FOLLOW_EOF_in_script269); if (state.failed) return script;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return script;
    }
    // $ANTLR end "script"


    // $ANTLR start "config"
    // Movimentum.g:32:5: config returns [Config result] : CONFIG '(' fptu= number ',' width= number ',' height= number ')' ';' ;
    public Config config() // throws RecognitionException [1]
    {   
        Config result = default(Config);

        double fptu = default(double);

        double width = default(double);

        double height = default(double);


        try 
    	{
            // Movimentum.g:33:7: ( CONFIG '(' fptu= number ',' width= number ',' height= number ')' ';' )
            // Movimentum.g:33:9: CONFIG '(' fptu= number ',' width= number ',' height= number ')' ';'
            {
            	Match(input,CONFIG,FOLLOW_CONFIG_in_config298); if (state.failed) return result;
            	Match(input,23,FOLLOW_23_in_config300); if (state.failed) return result;
            	PushFollow(FOLLOW_number_in_config318);
            	fptu = number();
            	state.followingStackPointer--;
            	if (state.failed) return result;
            	Match(input,24,FOLLOW_24_in_config332); if (state.failed) return result;
            	PushFollow(FOLLOW_number_in_config336);
            	width = number();
            	state.followingStackPointer--;
            	if (state.failed) return result;
            	Match(input,24,FOLLOW_24_in_config348); if (state.failed) return result;
            	PushFollow(FOLLOW_number_in_config352);
            	height = number();
            	state.followingStackPointer--;
            	if (state.failed) return result;
            	Match(input,25,FOLLOW_25_in_config362); if (state.failed) return result;
            	if ( state.backtracking == 0 ) 
            	{
            	   result = new Config(fptu, width, height); 
            	}
            	Match(input,26,FOLLOW_26_in_config390); if (state.failed) return result;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return result;
    }
    // $ANTLR end "config"


    // $ANTLR start "thingdefinition"
    // Movimentum.g:41:5: thingdefinition returns [Thing result] : IDENT ':' ( FILENAME anchordefinitions[defs] | BAR anchordefinitions[defs] ) ';' ;
    public Thing thingdefinition() // throws RecognitionException [1]
    {   
        Thing result = default(Thing);

        IToken IDENT1 = null;
        IToken FILENAME2 = null;

        try 
    	{
            // Movimentum.g:42:7: ( IDENT ':' ( FILENAME anchordefinitions[defs] | BAR anchordefinitions[defs] ) ';' )
            // Movimentum.g:42:9: IDENT ':' ( FILENAME anchordefinitions[defs] | BAR anchordefinitions[defs] ) ';'
            {
            	IDENT1=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_thingdefinition419); if (state.failed) return result;
            	Match(input,27,FOLLOW_27_in_thingdefinition429); if (state.failed) return result;
            	 var defs = new List<ConstAnchor>(); 
            	// Movimentum.g:44:3: ( FILENAME anchordefinitions[defs] | BAR anchordefinitions[defs] )
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);

            	if ( (LA4_0 == FILENAME) )
            	{
            	    alt4 = 1;
            	}
            	else if ( (LA4_0 == BAR) )
            	{
            	    alt4 = 2;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return result;}
            	    NoViableAltException nvae_d4s0 =
            	        new NoViableAltException("", 4, 0, input);

            	    throw nvae_d4s0;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // Movimentum.g:44:5: FILENAME anchordefinitions[defs]
            	        {
            	        	FILENAME2=(IToken)Match(input,FILENAME,FOLLOW_FILENAME_in_thingdefinition453); if (state.failed) return result;
            	        	PushFollow(FOLLOW_anchordefinitions_in_thingdefinition465);
            	        	anchordefinitions(defs);
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   result = new ImageThing(IDENT1.Text, 
            	        	  							                          ImageFromFile(FILENAME2.Text), 
            	        	  													  defs);
            	        	  		                    
            	        	}

            	        }
            	        break;
            	    case 2 :
            	        // Movimentum.g:50:5: BAR anchordefinitions[defs]
            	        {
            	        	Match(input,BAR,FOLLOW_BAR_in_thingdefinition496); if (state.failed) return result;
            	        	PushFollow(FOLLOW_anchordefinitions_in_thingdefinition508);
            	        	anchordefinitions(defs);
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   result = new BarThing(IDENT1.Text, defs); 
            	        	}

            	        }
            	        break;

            	}

            	Match(input,26,FOLLOW_26_in_thingdefinition547); if (state.failed) return result;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return result;
    }
    // $ANTLR end "thingdefinition"


    // $ANTLR start "anchordefinitions"
    // Movimentum.g:57:5: anchordefinitions[List<ConstAnchor> defs] : ( anchordefinition[defs] )+ ;
    public void anchordefinitions(List<ConstAnchor> defs) // throws RecognitionException [1]
    {   
        try 
    	{
            // Movimentum.g:58:4: ( ( anchordefinition[defs] )+ )
            // Movimentum.g:58:6: ( anchordefinition[defs] )+
            {
            	// Movimentum.g:58:6: ( anchordefinition[defs] )+
            	int cnt5 = 0;
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0 == IDENT) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // Movimentum.g:58:8: anchordefinition[defs]
            			    {
            			    	PushFollow(FOLLOW_anchordefinition_in_anchordefinitions573);
            			    	anchordefinition(defs);
            			    	state.followingStackPointer--;
            			    	if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    if ( cnt5 >= 1 ) goto loop5;
            			    if ( state.backtracking > 0 ) {state.failed = true; return ;}
            		            EarlyExitException eee =
            		                new EarlyExitException(5, input);
            		            throw eee;
            	    }
            	    cnt5++;
            	} while (true);

            	loop5:
            		;	// Stops C# compiler whinging that label 'loop5' has no statements


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "anchordefinitions"


    // $ANTLR start "anchordefinition"
    // Movimentum.g:62:5: anchordefinition[List<ConstAnchor> defs] : n= IDENT '=' (c= constvector | i= IDENT '+' c= constvector | i= IDENT '-' c= constvector ) ;
    public void anchordefinition(List<ConstAnchor> defs) // throws RecognitionException [1]
    {   
        IToken n = null;
        IToken i = null;
        ConstVector c = default(ConstVector);


        try 
    	{
            // Movimentum.g:63:7: (n= IDENT '=' (c= constvector | i= IDENT '+' c= constvector | i= IDENT '-' c= constvector ) )
            // Movimentum.g:63:9: n= IDENT '=' (c= constvector | i= IDENT '+' c= constvector | i= IDENT '-' c= constvector )
            {
            	n=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_anchordefinition618); if (state.failed) return ;
            	Match(input,28,FOLLOW_28_in_anchordefinition628); if (state.failed) return ;
            	 ConstVector v = null; 
            	// Movimentum.g:65:9: (c= constvector | i= IDENT '+' c= constvector | i= IDENT '-' c= constvector )
            	int alt6 = 3;
            	int LA6_0 = input.LA(1);

            	if ( (LA6_0 == 31) )
            	{
            	    alt6 = 1;
            	}
            	else if ( (LA6_0 == IDENT) )
            	{
            	    int LA6_2 = input.LA(2);

            	    if ( (LA6_2 == 29) )
            	    {
            	        alt6 = 2;
            	    }
            	    else if ( (LA6_2 == 30) )
            	    {
            	        alt6 = 3;
            	    }
            	    else 
            	    {
            	        if ( state.backtracking > 0 ) {state.failed = true; return ;}
            	        NoViableAltException nvae_d6s2 =
            	            new NoViableAltException("", 6, 2, input);

            	        throw nvae_d6s2;
            	    }
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return ;}
            	    NoViableAltException nvae_d6s0 =
            	        new NoViableAltException("", 6, 0, input);

            	    throw nvae_d6s0;
            	}
            	switch (alt6) 
            	{
            	    case 1 :
            	        // Movimentum.g:65:11: c= constvector
            	        {
            	        	PushFollow(FOLLOW_constvector_in_anchordefinition669);
            	        	c = constvector();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   v = c; 
            	        	}

            	        }
            	        break;
            	    case 2 :
            	        // Movimentum.g:66:11: i= IDENT '+' c= constvector
            	        {
            	        	i=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_anchordefinition698); if (state.failed) return ;
            	        	Match(input,29,FOLLOW_29_in_anchordefinition700); if (state.failed) return ;
            	        	PushFollow(FOLLOW_constvector_in_anchordefinition704);
            	        	c = constvector();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   v = ConstAdd(i.Line, defs, i.Text, c, true); 
            	        	}

            	        }
            	        break;
            	    case 3 :
            	        // Movimentum.g:67:11: i= IDENT '-' c= constvector
            	        {
            	        	i=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_anchordefinition721); if (state.failed) return ;
            	        	Match(input,30,FOLLOW_30_in_anchordefinition723); if (state.failed) return ;
            	        	PushFollow(FOLLOW_constvector_in_anchordefinition727);
            	        	c = constvector();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   v = ConstAdd(i.Line, defs, i.Text, c, false); 
            	        	}

            	        }
            	        break;

            	}

            	if ( state.backtracking == 0 ) 
            	{
            	   defs.Add(new ConstAnchor(n.Text, v)); 
            	}

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "anchordefinition"


    // $ANTLR start "constvector"
    // Movimentum.g:71:5: constvector returns [ConstVector result] : '[' ( '-' c= constscalar | c= constscalar ) ',' ( '-' c= constscalar | c= constscalar ) ( ',' ( '-' c= constscalar | c= constscalar ) | ) ']' ;
    public ConstVector constvector() // throws RecognitionException [1]
    {   
        ConstVector result = default(ConstVector);

        double c = default(double);


        try 
    	{
            // Movimentum.g:72:7: ( '[' ( '-' c= constscalar | c= constscalar ) ',' ( '-' c= constscalar | c= constscalar ) ( ',' ( '-' c= constscalar | c= constscalar ) | ) ']' )
            // Movimentum.g:72:31: '[' ( '-' c= constscalar | c= constscalar ) ',' ( '-' c= constscalar | c= constscalar ) ( ',' ( '-' c= constscalar | c= constscalar ) | ) ']'
            {
            	 double x = double.NaN, y = double.NaN; 
            	Match(input,31,FOLLOW_31_in_constvector830); if (state.failed) return result;
            	// Movimentum.g:74:9: ( '-' c= constscalar | c= constscalar )
            	int alt7 = 2;
            	int LA7_0 = input.LA(1);

            	if ( (LA7_0 == 30) )
            	{
            	    alt7 = 1;
            	}
            	else if ( (LA7_0 == NUMBER || LA7_0 == 31) )
            	{
            	    alt7 = 2;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return result;}
            	    NoViableAltException nvae_d7s0 =
            	        new NoViableAltException("", 7, 0, input);

            	    throw nvae_d7s0;
            	}
            	switch (alt7) 
            	{
            	    case 1 :
            	        // Movimentum.g:74:10: '-' c= constscalar
            	        {
            	        	Match(input,30,FOLLOW_30_in_constvector841); if (state.failed) return result;
            	        	PushFollow(FOLLOW_constscalar_in_constvector845);
            	        	c = constscalar();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   x = -c; 
            	        	}

            	        }
            	        break;
            	    case 2 :
            	        // Movimentum.g:75:14: c= constscalar
            	        {
            	        	PushFollow(FOLLOW_constscalar_in_constvector867);
            	        	c = constscalar();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   x = c; 
            	        	}

            	        }
            	        break;

            	}

            	Match(input,24,FOLLOW_24_in_constvector892); if (state.failed) return result;
            	// Movimentum.g:78:9: ( '-' c= constscalar | c= constscalar )
            	int alt8 = 2;
            	int LA8_0 = input.LA(1);

            	if ( (LA8_0 == 30) )
            	{
            	    alt8 = 1;
            	}
            	else if ( (LA8_0 == NUMBER || LA8_0 == 31) )
            	{
            	    alt8 = 2;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return result;}
            	    NoViableAltException nvae_d8s0 =
            	        new NoViableAltException("", 8, 0, input);

            	    throw nvae_d8s0;
            	}
            	switch (alt8) 
            	{
            	    case 1 :
            	        // Movimentum.g:78:10: '-' c= constscalar
            	        {
            	        	Match(input,30,FOLLOW_30_in_constvector903); if (state.failed) return result;
            	        	PushFollow(FOLLOW_constscalar_in_constvector907);
            	        	c = constscalar();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   y = -c; 
            	        	}

            	        }
            	        break;
            	    case 2 :
            	        // Movimentum.g:79:14: c= constscalar
            	        {
            	        	PushFollow(FOLLOW_constscalar_in_constvector929);
            	        	c = constscalar();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return result;
            	        	if ( state.backtracking == 0 ) 
            	        	{
            	        	   y = c; 
            	        	}

            	        }
            	        break;

            	}

            	// Movimentum.g:81:9: ( ',' ( '-' c= constscalar | c= constscalar ) | )
            	int alt10 = 2;
            	int LA10_0 = input.LA(1);

            	if ( (LA10_0 == 24) )
            	{
            	    alt10 = 1;
            	}
            	else if ( (LA10_0 == 32) )
            	{
            	    alt10 = 2;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return result;}
            	    NoViableAltException nvae_d10s0 =
            	        new NoViableAltException("", 10, 0, input);

            	    throw nvae_d10s0;
            	}
            	switch (alt10) 
            	{
            	    case 1 :
            	        // Movimentum.g:81:11: ',' ( '-' c= constscalar | c= constscalar )
            	        {
            	        	Match(input,24,FOLLOW_24_in_constvector956); if (state.failed) return result;
            	        	 double z = double.NaN; 
            	        	// Movimentum.g:82:11: ( '-' c= constscalar | c= constscalar )
            	        	int alt9 = 2;
            	        	int LA9_0 = input.LA(1);

            	        	if ( (LA9_0 == 30) )
            	        	{
            	        	    alt9 = 1;
            	        	}
            	        	else if ( (LA9_0 == NUMBER || LA9_0 == 31) )
            	        	{
            	        	    alt9 = 2;
            	        	}
            	        	else 
            	        	{
            	        	    if ( state.backtracking > 0 ) {state.failed = true; return result;}
            	        	    NoViableAltException nvae_d9s0 =
            	        	        new NoViableAltException("", 9, 0, input);

            	        	    throw nvae_d9s0;
            	        	}
            	        	switch (alt9) 
            	        	{
            	        	    case 1 :
            	        	        // Movimentum.g:82:12: '-' c= constscalar
            	        	        {
            	        	        	Match(input,30,FOLLOW_30_in_constvector987); if (state.failed) return result;
            	        	        	PushFollow(FOLLOW_constscalar_in_constvector991);
            	        	        	c = constscalar();
            	        	        	state.followingStackPointer--;
            	        	        	if (state.failed) return result;
            	        	        	if ( state.backtracking == 0 ) 
            	        	        	{
            	        	        	   z = -c; 
            	        	        	}
